# kinto-http.py

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .therapist.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.githooks/: pre-commit
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
config/: kinto.ini
examples/: importation.py
kinto_client/: __init__.py  argparse.py  batch.py  cli_utils.py  exceptions.py  importer.py  logging.py  records.py  replication.py  session.py  utils.py
kinto_client/tests/: functional.py  support.py  test_batch.py  test_cli_utils.py  test_client.py  test_endpoints.py  test_importer.py  test_replication.py  test_session.py  test_utils.py
kinto_http/: __init__.py  _init_.py  aio.py  batch.py  cli_utils.py  client.py  constants.py  exceptions.py  patch_type.py  replication.py  session.py  utils.py
kinto_http/tests/: conftest.py  functional.py  support.py  test_async_client.py  test_batch.py  test_cli_utils.py  test_client.py  test_endpoints.py  test_exceptions.py  test_functional.py  test_functional_async.py  test_logging.py  test_replication.py  test_utils.py  (+1 more)
kintoclient/: __init__.py  utils.py
tests/: conftest.py  support.py  test_async_client.py  test_batch.py  test_cli_utils.py  test_client.py  test_endpoints.py  test_exceptions.py  test_functional.py  test_functional_async.py  test_logging.py  test_login.py  test_replication.py  test_session.py  test_utils.py
(+19 files in other folders)
